<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".CreateUserActivity">

    <Button
      android:id="@+id/create_account_CreateUser_button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/margin_button"
      android:layout_marginEnd="@dimen/margin_button"
      android:background="@drawable/style_primary"
      android:onClick="createAccount"
      android:text="@string/createAccountButtonText"
      android:textAllCaps="false"
      android:textColor="#FFFFFF"
      android:textSize="16sp"
      app:layout_constraintBottom_toTopOf="@+id/guideline6"
      app:layout_constraintEnd_toStartOf="@+id/guideline3"
      app:layout_constraintStart_toStartOf="@+id/guideline2" />


    <EditText
      android:id="@+id/create_account_password_CreateUser_editText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:autofillHints=""
      android:ems="10"
      android:hint="@string/createAccountPasswordFieldHint"
      android:inputType="textPassword"

      app:layout_constraintBottom_toTopOf="@+id/guideline4"
      app:layout_constraintEnd_toStartOf="@+id/guideline3"
      app:layout_constraintStart_toStartOf="@+id/guideline2"
      android:background="@drawable/edit_text_default"
      android:drawableStart="@drawable/ic_lock"
      android:drawablePadding="@dimen/ic_padding"/>

    <EditText
      android:id="@+id/create_account_email_CreateUser_editText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:autofillHints=""
      android:ems="10"
      android:hint="@string/createAccountEmailFieldHint"
      android:inputType="textEmailAddress"
      app:layout_constraintBottom_toTopOf="@+id/guideline5"
      app:layout_constraintEnd_toStartOf="@+id/guideline3"
      app:layout_constraintStart_toStartOf="@+id/guideline2"
      android:background="@drawable/edit_text_default"
      android:drawableStart="@drawable/ic_person"
      android:drawablePadding="@dimen/ic_padding"
      />

    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="@dimen/vertical_1" />
    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="@dimen/vertical_2" />
    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="@dimen/horizontal_2" />
    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="@dimen/horizontal_1" />
    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guideline6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="@dimen/horizontal_3" />
</androidx.constraintlayout.widget.ConstraintLayout>