...
    <string name="prompt_password">Password</string>

    <string name="email_reset">Enter your email address</string>
    <string name="reset_button">Reset password</string>
    <string name="login_failed_snack">Login failed !</string>
    <string name="saveUserFail_Login">Failed to auto-save user, please log in again</string>
    <string name="create_account_failed_snack">Create account failed !</string>
    <string name="invalid_email_snack">Invalid email !</string>

    <!-- AdActivity stuff -->
    <string name="backbutton_desc">Close ad</string>
    <string name="vtourbutton_text">Virtual Tour</string>
    <string name="address">Address:</string>
...
    <!--  -->

    <string name="createPanoramaTourButton">Panorama Tour</string>
    <string name="cameraButtonText">Camera</string>
    <string name="galleryButtonText">Gallery</string>
    <string name="createAccountPasswordFieldHint">Enter a password</string>
    <string name="createAccountButtonText">Create Account</string>
    <string name="backToLoginFromCreateButtonText">Back to login</string>
    <string name="createAccountEmailFieldHint">Enter an email</string>
    <string name="loginButtonText">Log In!</string>
    <string name="resetPasswordButtonText">Password Forgotten</string>
    <string name="createAccountFromLoginButtonText">Create account</string>
    <string name="resetConfirmationViewText">If this address is valid, you will receive a link to change your password</string>
...
